# ffmpeg_hjs

./: .gitignore  CMakeLists.txt  VideoDecoding.cpp  VideoDecoding.h  VideoEncoding.cpp  VideoEncoding.h  ffmpeg_test  main.cpp
assets/: Sample1.h264  Sample1.h265
